# zucced-api

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  setup.cfg  setup.py
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
make/: ci.mk  format.mk  lint.mk  test.mk
migrations/: env.py  helper.py
migrations/versions/: 0b28cf7f7722_add_compromised_accounts.py
migrations/versions/add_compromised_accounts/: downgrade.sql  upgrade.sql
scripts/: insert_script.sh
src/zucced_api/: app.py  asgi.py
src/zucced_api/core/: config_loader.py  db.py  security.py  service_factory.py  version.py
src/zucced_api/core/exceptions/: __init__.py  http_exceptions.py
src/zucced_api/core/validators/: __init__.py  i_validator.py
src/zucced_api/domain/compromised_accounts/: compromised_account_model.py  compromised_account_queries.py  compromised_account_schemas.py  compromised_account_services.py
src/zucced_api/routers/: compromised_accounts_route.py
tests/: conftest.py  test_utils.py
tests/functional_tests/: __init__.py
tests/system_tests/test_users/: __init__.py  test_authenticate.py  test_register.py  test_verify_token.py  user_helper.py
