[metadata]
name = zucced_api
url = https://github.com/haveibeenzucced/zucced-api
maintainer = Kristian Jakobsen
maintainer_email = kristian@nymann.dev
description = REST API for zucced_api
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
package_dir = = src
python_requires = >= 3.8
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-dotenv
    pytest-cov
    pytest-xdist
    requests
    pytz
    faker
install_requires =
    aio-pika==6.8.0
    aiormq==3.3.1
    alembic==1.6.2
    asyncpg==0.23.0
    certifi==2020.12.5
    click==7.1.2
    dnspython==2.1.0
    email-validator==1.1.2
    fastapi==0.64.0
    gino==1.0.1
    gino-starlette==0.1.1
    gunicorn==20.1.0
    h11==0.12.0
    httptools==0.2.0
    Mako==1.1.4
    MarkupSafe==2.0.1
    multidict==5.1.0
    pamqp==2.3.0
    pip==21.1.1
    psycopg2-binary==2.8.6
    pydantic==1.8.2
    python-dateutil==2.8.1
    python-dotenv==0.17.1
    python-editor==1.0.4
    sentry-sdk==1.1.0
    setuptools==56.0.0
    six==1.16.0
    SQLAlchemy==1.3.24
    SQLAlchemy-Utils==0.37.3
    starlette==0.13.6
    typing-extensions==3.10.0.0
    urllib3==1.26.4
    uvicorn==0.13.4
    uvloop==0.15.2
    yarl==1.6.3
    pyotp==2.6.0



[options.extras_require]
dev =
    isort
    wemake-python-styleguide
    mypy
    black
    dlint
    flake8
    nitpick
    cohesion
    pyformat
    add-trailing-comma
    pre-commit
    devtools[pygments]

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"


[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts =
    --color=yes
    --cov-report=xml
    --cov-report=html
    --cov=src
    --cov-report=term-missing

[coverage:run]
branch = True
source =
    src
    tests

[coverage:paths]
source =
    src

[aliases]
test=pytest

[pydocstyle]
convention=google

[flake8]
format = wemake
show-source = True
exclude =
    src/zucced_api/core/version.py
    migrations/env.py
ignore = D107,D202,D203,D401,E203,E402,E501,W503,S101,H601,D101,D102,D103
inline-quotes = double
max-line-length = 120
per-file-ignores =
    tests/unit_tests/test_password_policy.py:WPS202
    tests/**.py:S106
    migrations/**.py:WPS102,D104

[mypy-tests.*]
ignore_errors = True

[mypy]
follow_imports = skip
ignore_missing_imports = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True

[isort]
lexicographical = True
force_sort_within_sections = True
force_single_line = True
src_paths=src,tests
single_line_exclusions = typing
known_first_party = zucced_api,tests
combine_as_imports = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 120
multi_line_output = 3

[black]
max-line-length = 120
